# rag-document-qa

./: .gitignore  DOCKER_GUIDE.md  Dockerfile  Dockerfile.frontend  FEATURES.md  IMPLEMENTATION_CHECKLIST.md  IMPROVEMENTS_SUMMARY.md  PROJECT_SUMMARY.md  README.md  UPGRADE_GUIDE.md  docker-compose.yml  main.py  opendataloader.py  pyproject.toml  requirements.txt
backend/: auth.py  config.py  history.py  main.py
backend/data/: history.json  sessions.json  users.json
backend/rag/: chunking.py  embeddings.py  hybrid_search.py  metadata_filter.py  pdf_loader.py  pipeline.py  reranker.py  vector_store.py
backend/services/: document_service.py
frontend/: app.py  app_old.py
